fix:set style according to dark mode

--- a/react/src/components/ImageEnvironmentSelectFormItems.css
+++ b/react/src/components/ImageEnvironmentSelectFormItems.css
@@ -25,18 +25,38 @@ div.image-environment-select-form-item
   overflow: hidden;
 }
 
-div.image-environment-select-form-item
-  span.ant-select-selection-item
-  div.tag-wrap::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  width: 10px; /* Width of the transparent gradient area */
-  background: linear-gradient(
-    to right,
-    rgba(255, 255, 255, 0),
-    rgba(255, 255, 255, 1)
-  );
+@media (prefers-color-scheme: light) {
+  div.image-environment-select-form-item
+    span.ant-select-selection-item
+    div.tag-wrap::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 10px; /* Width of the transparent gradient area */
+    background: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0),
+      rgba(255, 255, 255, 1)
+    );
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  div.image-environment-select-form-item
+    span.ant-select-selection-item
+    div.tag-wrap::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 10px; /* Width of the transparent gradient area */
+    background: linear-gradient(
+      to right,
+      rgba(20, 20, 20, 0),
+      rgba(20, 20, 20, 1)
+    );
+  }
 }
